# FOGT_PD

./: pyproject.toml  zadanie.ipynb
