[tool.poetry]
version = "0.1.0"
description = ""
authors = ["Joanna Brodnicka"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
sympy = "^1.12"
matplotlib = "^3.8.2"
jupyterlab = "^4.0.10"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"